[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppcax"
version = "0.1.0"
description = "Stochastic dimensionality reduction for finance data using PPCA in JAX framework"
readme = "README.md"
authors = [
    { name = "Ahmed Nabil Atwa", email = "dr.ahmedna.ai@gmail.com" }
]
license = {file="LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy==1.26.4",
    "scikit_learn==1.4.2",
    "jax==0.4.28",
    "jaxlib 0.4.28",
    "chex==0.1.86",
    "distrax==0.1.5"
]

[project.urls]
homepage = "https://github.com/AI-Ahmed/ppcax"
repository = "https://github.com/AI-Ahmed/ppcax"

# If you had any console scripts defined in your setup.py,
# they would potentially look like this:
[project.scripts]
# your-entry-point-name = "package.module:function"

# This section is to specify source files that may not be in the expected places for Python package data:
[tool.setuptools]
packages = { find = { where = ["src"] } }

# If you had package data, you would include it like this:
# include_package_data = true
