[build-system]
requires = ["flit_core >=3.7,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ppcax"
version = "0.1.1"
description = "Stochastic dimensionality reduction for finance data using PPCA in JAX framework"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "Ahmed Nabil Atwa", email = "dr.ahmedna.ai@gmail.com" }
]
license = {file="LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.26.0,<2.3.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "jax>=0.4.13,<0.5.0",
    "jaxlib>=0.4.13,<0.5.0",
    "chex>=0.1.81,<0.2.0",
    "distrax>=0.1.5,<0.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0,<8.0.0",
]

[project.urls]
homepage = "https://github.com/AI-Ahmed/ppcax"
repository = "https://github.com/AI-Ahmed/ppcax"

[tool.flit.module]
name = "ppcax"
directory = "src"

[tool.flit.sdist]
include = ["tests/"]